aries -ongoing updates
aries ongoing

Signed-off-by: Chris Morley <chrisinnanaimo@hotmail.com>

--- a/configs/sim/gscreen/aries/aries.ini
+++ b/configs/sim/gscreen/aries/aries.ini
@@ -2,11 +2,14 @@
 VERSION = 1.0
 MACHINE = aries
 # set level of debug messages sent to terminal
-DEBUG = 0x7FFFFFFF
-#DEBUG = 0
+#DEBUG = 0x7FFFFFFF
+DEBUG = 0
 
 [DISPLAY]
 DISPLAY = gscreen -d -c aries
+EMBED_TAB_NAME = ctrl
+EMBED_TAB_LOCATION = vcp_right
+EMBED_TAB_COMMAND = gladevcp -x {XID} -H custom_postgui.hal control_panel.glade
 EDITOR = gedit
 POSITION_OFFSET = RELATIVE
 POSITION_FEEDBACK = ACTUAL
@@ -33,6 +36,7 @@ py = python
 
 [RS274NGC]
 PARAMETER_FILE = linuxcnc.var
+SUBROUTINE_PATH = ~/linuxcnc/nc_files/macros
 
 [EMCMOT]
 EMCMOT = motmod
@@ -46,9 +50,10 @@ TASK = milltask
 CYCLE_TIME = 0.010
 
 [HAL]
-HALUI = halui
+#HALUI = halui
 HALFILE = aries.hal
 HALFILE = custom.hal
+#HALCMD = loadusr gladevcp control_panel.glade
 #POSTGUI_HALFILE = custom_postgui.hal
 
 [HALUI]
