iocontrol - load an initial tool number at startup
proof of concept.

--- a/configs/sim/axis/axis.ini
+++ b/configs/sim/axis/axis.ini
@@ -13,8 +13,8 @@ VERSION = 1.1
 MACHINE = LinuxCNC-HAL-SIM-AXIS
 
 # Debug level, 0 means no messages. See src/emc/nml_int/emcglb.h for others
-#DEBUG = 0x7FFFFFFF
-DEBUG = 0
+DEBUG = 0x7FFFFFFF
+#DEBUG = 0
 
 # Sections for display options ------------------------------------------------
 [DISPLAY]
@@ -114,6 +114,7 @@ TOOL_CHANGE_QUILL_UP = 1
 # list of hal config files to run through halcmd
 # files are executed in the order in which they appear
 HALFILE = core_sim.hal
+HALCMD = setp iocontrol.0.tool-initial-number 1
 HALFILE = sim_spindle_encoder.hal
 HALFILE = axis_manualtoolchange.hal
 HALFILE = simulated_home.hal
